<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/rotar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotar" />

    <Button
        android:id="@+id/agrupar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agrupar" />

    <Button
        android:id="@+id/animar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/animar" />

    <Button
        android:id="@+id/apagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apagar" />

    <TextView
        android:id="@+id/texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/texto"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/ic_launcher" />

</LinearLayout>